@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.17 2012/09/09 18:45:45 jaapb Exp $
+$NetBSD: distinfo,v 1.18 2012/09/10 05:33:25 jaapb Exp $
 
 SHA1 (lablgtk-2.16.0.tar.gz) = 3dec411a410fbb38d6e2e5a43a4ebfb2e407e7e6
 RMD160 (lablgtk-2.16.0.tar.gz) = 47d89ce62e02dc4143f340e92adfdde6bbdef89a
 Size (lablgtk-2.16.0.tar.gz) = 787217 bytes
-SHA1 (patch-src_Makefile) = fad55d7546b948b006a8c3ad9f5381ac647cfb53
+SHA1 (patch-src_Makefile) = 62095e6eff84219e954a839b0fcf4214b9bf42e4
