@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2841 2012/09/09 23:39:39 cheusov Exp $
+$NetBSD: CHANGES-2012,v 1.2842 2012/09/10 05:33:25 jaapb Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -4382,6 +4382,7 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated sysutils/p5-SSH-Batch to 0.029 [abs 2012-09-09]
 	Updated geography/gama to 1.13 [gdt 2012-09-09]
 	Updated mail/ruby-mime-types to 1.19 [taca 2012-09-09]
+	Updated x11/lablgtk to 2.16.0 [jaapb 2012-09-09]
 	Updated net/nocol to 4.3.1nb7 [dholland 2012-09-09]
 	Updated pkgtools/lintpkgsrc to 4.85 [dholland 2012-09-09]
 	Updated lang/runawk to 1.4.3 [cheusov 2012-09-09]
